--- a/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
@@ -18,9 +18,9 @@ mermaid:
   theme: forest
 ---
 
-Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Istraživač koji bi hteo da ispita prirodu neeksperimentalnim metodama (zato što je izvođenje eksperimenta neetičko ili nemoguće) je bio ograničen na ispitivanje korelacija. Kada u prirodi vidimo dve stvari koje se dešavaju zajedno, ne možemo zasigurno znati koja uzrokuje koju, niti da li su uopšte povezane (takođe, postoje uzroci koji uopšte nisu korelisani).[^1] Svet medicine, a i nauke njoj sličnoj, bile su ograničene na tvrdnje asocijacija. Naučnici su želeli da kažu $A$ uzrokuje $B$ ($A\rightarrow B$), ali nisu smeli, jer su takve tvrdnje bile prejake za statističke metode. Medicinska literatura je prepuna reči koje izbegavaju uzročne tvrdnje --- kao što su: veza, asocijacija, korelacija, značajna povezanost [@hernán2018]. Ispostavlja se da je sasvim moguće samo posmatranjem doći do uzroka stvari. Kako možemo bez ikakvog intervenisanja, tj. samo gledanjem prirode doći do zaključaka šta bi se desilo da zapravo uradimo nešto? Kako je tako nešto moguće?
+Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Istraživač koji bi hteo da ispita prirodu neeksperimentalnim metodama (zato što je izvođenje eksperimenta neetičko ili nemoguće) je bio ograničen na ispitivanje korelacija. Kada u prirodi vidimo dve stvari koje se dešavaju zajedno, ne možemo zasigurno znati koja uzrokuje koju, niti da li su uopšte povezane (takođe, postoje uzroci koji uopšte nisu korelisani).[^1] Svet medicine, a i nauke njoj sličnoj, bile su ograničene na tvrdnje asocijacija. Naučnici su želeli da kažu $A$ uzrokuje $B$ ($A\rightarrow B$), ali nisu smeli, jer su takve tvrdnje bile prejake za statističke metode. Medicinska literatura je prepuna reči koje izbegavaju uzročne tvrdnje --- kao što su: veza, asocijacija, korelacija, značajna povezanost [@hernán2018]. Ispostavlja se da je sasvim moguće samo posmatranjem doći do uzroka stvari. Možemo li bez ikakvog intervenisanja, tj. samo gledanjem prirode, doći do zaključaka šta bi se desilo da zapravo uradimo nešto?
 
-[^1]: Poznata mantra statistike: "Korelacija ne znači kauzalnost." Kako stvari stoje, kauzalnost ne garantuje ni korelaciju.
+[^1]: Poznata mantra statistike: "Korelacija ne znači kauzalnost." Međutim, kauzalnost ne garantuje ni korelaciju.
 
 # Kletva korelacija
 
@@ -42,15 +42,21 @@ Ako se velika većina istraživanja bazira na asocijacijama. Posledica takvog is
 
 # Šta je kauzalno zaključivanje?
 
-Kauzalno, uzročno-posledično zaključivanje, je pravi naučni cilj. Ponekad je dobro imati predviđanja, ali uglavnom ono što želimo je da razumemo fenomen kako bismo mogli da intervenišemo tj. promenimo nešto. Produžimo životni vek, sprečimo bolest, smanjimo rizik, planiramo projekat, itd. U tom slučaju ne možemo vršiti zaključivanja uz pomoć prvog stepenika, već pričamo o drugom stepeniku --- intervencijama. Tad nas [korelacije mogu zavarati](https://www.tylervigen.com/spurious-correlations). Treba nam način da otkrijemo kako su stvari zapravo povezane, a da se ne zavaravamo lažnim asocijacijama. Interesantno je kako je Francis Galton (1822-1911), Britanski učenjak, u svojoj potrazi za uzrocima, nabasao prvo na korelaciju ($\rho$). Tim putem moramo proći i mi.
+Kauzalno, uzročno-posledično, zaključivanje je pravi naučni cilj. Ponekad je dobro imati predviđanja, ali uglavnom ono što želimo je da razumemo fenomen kako bismo mogli da intervenišemo tj. promenimo nešto. Produžimo životni vek, sprečimo bolest, smanjimo rizik, planiramo projekat, itd. U tom slučaju ne možemo vršiti zaključivanja uz pomoć prvog stepenika, već pričamo o drugom stepeniku --- intervencijama. Tad nas [korelacije mogu zavarati](https://www.tylervigen.com/spurious-correlations). Treba nam način da otkrijemo kako su stvari zapravo povezane, a da se ne zavaravamo lažnim asocijacijama. Interesantno je kako je Francis Galton (1822-1911), Britanski učenjak, u svojoj potrazi za uzrocima, nabasao prvo na korelaciju ($\rho$). Tim putem moramo proći i mi.
 
 ## Galton otkriva regresiju
 
-Francis Galton je tražio uzročno objašnjenje naslednosti visine ljudi.[^2] Elem, Galton je primetio da viši očevi imaju prosečno više sinove, ali ne više od sebe. Sinovi niskih očeva bili su, u proseku, niži ali ne niski kao svoji očevi (@fig-regresija-1). Galton je ovaj fenomen nazvao "regresija ka mediokritetu."[^3] Regresija ka proseku (kako je danas poznata) je statistička pojava prisutna svuda oko nas --- u tom trenutku Galton je nije prepoznao, već je mislio da je nabasao na zakon nasleđivanja. Do 1889. je shvatio da je zapravo otkrio korelaciju, a da je regresija ka proseku posledica sreće ($Visina = Prava\,visina + sreća$). Zapravo postoje dve regresione linije (@fig-regresija-1 i @fig-regresija-2). Obe linije predviđaju jednako dobro. Jednačine regresionih linija su različite, ali je situacija potpuno simetrična. Regresija ka proseku ne može biti uzrok jer ne razlikuje nikakav redosled događaja. Dve varijable (visina očeva i sinova) su korelisane ako jedna "predviđa" drugu, a koeficijent korelacije je veći što su obe varijable bliže pravoj liniji. U slučaju savršene korelacije ($\rho = 1$) između visine očeva i njihovih sinova, svaki dodatni centimetar visine oca bi deterministički bio prenesen na sina, što nije slučaj.
+Francis Galton je tražio uzročno objašnjenje nasleđivanja visine ljudi.[^2] Elem, Galton je primetio da viši očevi imaju prosečno više sinove, ali ne više od sebe. Sinovi niskih očeva bili su, u proseku, niži ali ne niski kao svoji očevi (@fig-regresija-1). Galton je ovaj fenomen približavanja visine pojedinca ka prosečnoj vrednosti visine kroz generacije nazvao "regresija ka mediokritetu."[^3] Na trenutak je delovalo kao da ovaj "zakon" regresije sprečava da visoki ljudi postaju sve viši, a niži ljudi sve niži (dok ne nestanu?). Galtonov pokušaj kauzalnog objašnjenja ponašao se nešto nalik elastičnoj opruzi koja se vraća u svoj prvobitni oblik kada se istegne ili sabije. Galton je pogrešio, ali nije jedini. Mnogli ljudi danas prave sličnu grešku kada traže uzročno objašnjenje, na primer, košarkaškog igrača koji je odigrao dobru prošlu sezonu u odnosu na trenutnu. Neki uzroci sigurno postoje, ali bi se takve pojave dešavle i samo pukom srećom.
+
+Galton je ubrzo počeo da meri odnose između visine i raznih drugih vrednosti, poput dužine podlaktice. Svaka od tih merenja je pokazala istu pojavu regresije ka proseku. Očigledno je da visina nije uzrok dužine podlaktice, ili obrnuto ($Visina \nrightarrow Dužina\,podlaktice$ ili $Visina \nleftarrow Dužina\,podlaktice$). Štaviše, obe vrednosti sigurno imaju genetske i sredinske uzroke. Regresija ka proseku (kako je danas poznata) je statistička pojava prisutna svuda oko nas --- u tom trenutku Galton je nije prepoznao, već je mislio da je nabasao na zakon nasleđivanja. Do 1889. je shvatio da je zapravo otkrio korelaciju, a da je regresija ka proseku posledica sreće ($Visina = Prava\,visina + sreća$). 
+
+Regresija je način da se povežu dve numeričke vrednosti, a fenomen regresije ka proseku nastaje između bilo koje dve korelisane vrednosti. Regresiona linija je ona linija koja najbolje predviđa nepoznatu varijablu kada nam je jedna poznata. Zapravo postoje dve regresione linije (@fig-regresija-1 i @fig-regresija-2). Obe linije predviđaju jednako dobro. Jednačine regresionih linija su različite, ali je situacija potpuno simetrična. Kada nam je poznata visina oca, možemo predviđati visnu sina; sa poznatom visinom sina možemo predviđati visinu oca. Kada je Galton shvatio da se vremenski redosled može potpuno obrnuti odustao je od bilo kakvog pokušaja da tretira regresiju ka proseku kao uzrok. Regresija ka proseku ne može biti uzrok jer ne razlikuje nikakav redosled događaja.
+
+<!-- Dve varijable (visina očeva i sinova) su korelisane ako jedna "predviđa" drugu, a koeficijent korelacije je veći što su obe varijable bliže pravoj liniji. U slučaju savršene korelacije ($\rho = 1$) između visine očeva i njihovih sinova, svaki dodatni centimetar visine oca bi deterministički bio prenesen na sina, što nije slučaj. -->
 
 [^2]: Njegova motivacija je jasnija kad saznamo da je on bio prvi rođak Čarlsa Darvina. Zapravo, Galtona je zanimala naslednost inteligencije, kao i većinu tadašnjeg Britanskog noblesa opsednutog razlikama između sebe i "prostog" naroda.
 
-[^3]: Oličenje tzv. visokog društva.
+[^3]: Tipično za tadašnje tzv. visoko društvo.
 
 ```{r}
 #| echo: false
@@ -101,7 +107,7 @@ d %>%
   )
 ```
 
-Galton je otkrio objektivnu meru povezanosti dve varijable. Kasnije će njegov učenik Karl Pirson definisati Pirsonov koeficijent ($\rho$ ili $r$) koji je dobro poznat svakom naučniku. Insistiranje na korišćenju korelacija zarad neke fiktivne "objektivnosti" je unazadilo nauku desetinama godina. Prodaja sladoleda je korelisana sa stopom kriminala, ali nikad ne bismo izmislili priču da objasnimo kako prodaja sladoleda utiče na kriminal --- jasno nam je da su slučajno povezani. Korelacije ne govore ništa o uzrocima. Mogu poslužiti u predviđannjima, ali nemaju nikakvu eksplanatornu vrednost. Zaključivanje o intervencijama je nepouzdano. Provlačenjem kroz skupštinu zakona o zabrani prodaje sladoleda, ne bismo smanjili kriminal.
+Galton je otkrio objektivnu meru povezanosti dve varijable. Kasnije će njegov učenik Karl Pirson definisati Pirsonov koeficijent ($\rho$ ili $r$) koji je dobro poznat svakom naučniku. Insistiranje na korišćenju korelacija zarad neke fiktivne "objektivnosti" je unazadilo nauku desetinama godina. Prodaja sladoleda je korelisana sa stopom kriminala, ali nikad ne bismo izmislili priču da objasnimo kako prodaja sladoleda utiče na kriminal --- jasno nam je da su slučajno povezani. Korelacije ne govore ništa o uzrocima. Mogu poslužiti u predviđannjima, ali nemaju nikakvu eksplanatornu vrednost. Zaključivanje o intervencijama je nepouzdano. Provlačenjem kroz skupštinu zakona o zabrani prodaje sladoleda, neće smanjiti kriminal.
 
 Zašto su prodaja sladoleda i kriminal povezani; gde se kriju uzroci?
 
