--- a/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
@@ -70,3 +70,14 @@ PMID: 12242150},
 	note = {PMID: 23371353
 PMCID: PMC3626058}
 }
+
+@misc{mcelreath2021,
+	title = {Regression, Fire, and Dangerous Things (1/3)},
+	author = {McElreath, Richard},
+	year = {2021},
+	month = {06},
+	date = {2021-06-15},
+	url = {https://elevanth.org/blog/2021/06/15/regression-fire-and-dangerous-things-1-3/},
+	note = {Section: Uncategorized},
+	langid = {canadian}
+}
