--- a/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
@@ -48,15 +48,15 @@ Kauzalno, uzročno-posledično, zaključivanje je pravi naučni cilj. Ponekad je
 
 Francis Galton je tražio uzročno objašnjenje nasleđivanja visine ljudi.[^2] Elem, Galton je primetio da viši očevi imaju prosečno više sinove, ali ne više od sebe. Sinovi niskih očeva bili su, u proseku, niži ali ne niski kao svoji očevi (@fig-regresija-1). Galton je ovaj fenomen približavanja visine pojedinca ka prosečnoj vrednosti visine kroz generacije nazvao "regresija ka mediokritetu."[^3] Na trenutak je delovalo kao da ovaj "zakon" regresije sprečava da visoki ljudi postaju sve viši, a niži ljudi sve niži (dok ne nestanu?). Galtonov pokušaj kauzalnog objašnjenja ponašao se nešto nalik elastičnoj opruzi koja se vraća u svoj prvobitni oblik kada se istegne ili sabije. Galton je pogrešio, ali nije jedini. Mnogli ljudi danas prave sličnu grešku kada traže uzročno objašnjenje, na primer, košarkaškog igrača koji je odigrao dobru prošlu sezonu u odnosu na trenutnu. Neki uzroci sigurno postoje, ali bi se takve pojave dešavle i samo pukom srećom.
 
-Galton je ubrzo počeo da meri odnose između visine i raznih drugih vrednosti, poput dužine podlaktice. Svaka od tih merenja je pokazala istu pojavu regresije ka proseku. Očigledno je da visina nije uzrok dužine podlaktice, ili obrnuto ($Visina \nrightarrow Dužina\,podlaktice$ ili $Visina \nleftarrow Dužina\,podlaktice$). Štaviše, obe vrednosti sigurno imaju genetske i sredinske uzroke. Regresija ka proseku (kako je danas poznata) je statistička pojava prisutna svuda oko nas --- u tom trenutku Galton je nije prepoznao, već je mislio da je nabasao na zakon nasleđivanja. Do 1889. je shvatio da je zapravo otkrio korelaciju, a da je regresija ka proseku posledica sreće ($Visina = Prava\,visina + sreća$). 
+[^2]: Njegova motivacija je jasnija kad saznamo da je on bio prvi rođak Čarlsa Darvina. Zapravo, Galtona je zanimala naslednost inteligencije, kao i većinu tadašnjeg Britanskog noblesa opsednutog razlikama između sebe i "prostog" naroda.
+
+[^3]: Tipično za tadašnje tzv. visoko društvo.
+
+Galton je ubrzo počeo da meri odnose između visine i raznih drugih vrednosti, poput dužine podlaktice. Svaka od tih merenja je pokazala istu pojavu regresije ka proseku. Očigledno je da visina nije uzrok dužine podlaktice, ili obrnuto ($Visina \nrightarrow Dužina\,podlaktice$ ili $Visina \nleftarrow Dužina\,podlaktice$). Štaviše, obe vrednosti sigurno imaju genetske i sredinske uzroke. Regresija ka proseku (kako je danas poznata) je statistička pojava prisutna svuda oko nas --- u tom trenutku Galton je nije prepoznao, već je mislio da je nabasao na zakon nasleđivanja. Do 1889. je shvatio da je zapravo otkrio korelaciju, a da je regresija ka proseku posledica sreće ($Visina = Prava\,visina + sreća$).
 
 Regresija je način da se povežu dve numeričke vrednosti, a fenomen regresije ka proseku nastaje između bilo koje dve korelisane vrednosti. Regresiona linija je ona linija koja najbolje predviđa nepoznatu varijablu kada nam je jedna poznata. Zapravo postoje dve regresione linije (@fig-regresija-1 i @fig-regresija-2). Obe linije predviđaju jednako dobro. Jednačine regresionih linija su različite, ali je situacija potpuno simetrična. Kada nam je poznata visina oca, možemo predviđati visnu sina; sa poznatom visinom sina možemo predviđati visinu oca. Kada je Galton shvatio da se vremenski redosled može potpuno obrnuti odustao je od bilo kakvog pokušaja da tretira regresiju ka proseku kao uzrok. Regresija ka proseku ne može biti uzrok jer ne razlikuje nikakav redosled događaja.
 
 <!-- Dve varijable (visina očeva i sinova) su korelisane ako jedna "predviđa" drugu, a koeficijent korelacije je veći što su obe varijable bliže pravoj liniji. U slučaju savršene korelacije ($\rho = 1$) između visine očeva i njihovih sinova, svaki dodatni centimetar visine oca bi deterministički bio prenesen na sina, što nije slučaj. -->
-
-[^2]: Njegova motivacija je jasnija kad saznamo da je on bio prvi rođak Čarlsa Darvina. Zapravo, Galtona je zanimala naslednost inteligencije, kao i većinu tadašnjeg Britanskog noblesa opsednutog razlikama između sebe i "prostog" naroda.
-
-[^3]: Tipično za tadašnje tzv. visoko društvo.
 
 ```{r}
 #| echo: false
@@ -107,13 +107,13 @@ d %>%
   )
 ```
 
-Galton je otkrio objektivnu meru povezanosti dve varijable. Kasnije će njegov učenik Karl Pirson definisati Pirsonov koeficijent ($\rho$ ili $r$) koji je dobro poznat svakom naučniku. Insistiranje na korišćenju korelacija zarad neke fiktivne "objektivnosti" je unazadilo nauku desetinama godina. Prodaja sladoleda je korelisana sa stopom kriminala, ali nikad ne bismo izmislili priču da objasnimo kako prodaja sladoleda utiče na kriminal --- jasno nam je da su slučajno povezani. Korelacije ne govore ništa o uzrocima. Mogu poslužiti u predviđannjima, ali nemaju nikakvu eksplanatornu vrednost. Zaključivanje o intervencijama je nepouzdano. Provlačenjem kroz skupštinu zakona o zabrani prodaje sladoleda, neće smanjiti kriminal.
+Galton je otkrio objektivnu meru povezanosti dve varijable. Kasnije će njegov učenik Karl Pirson definisati Pirsonov koeficijent ($\rho$ ili $r$) koji je dobro poznat svakom naučniku. Insistiranje na korišćenju korelacija zarad neke fiktivne "objektivnosti" je unazadilo nauku desetinama godina. Prodaja sladoleda je korelisana sa stopom kriminala, ali nikad ne bismo izmislili priču da objasnimo kako prodaja sladoleda utiče na kriminal --- jasno nam je da su slučajno povezani. Korelacije ne govore ništa o uzrocima. Mogu poslužiti u predviđanjima, ali nemaju nikakvu eksplanatornu vrednost. Zaključivanje o intervencijama je nepouzdano. Provlačenjem kroz skupštinu zakona o zabrani prodaje sladoleda, neće smanjiti kriminal.
 
 Zašto su prodaja sladoleda i kriminal povezani; gde se kriju uzroci?
 
 ## Konfaunder, ili skrivena treća varijabla
 
-Konfaunder, od Latinskog *confundere*, što znači "umešano", je varijabla čiji efekat utiče na izloženost i ishod, stvarajući lažnu asocijaciju. Na primer, ako procenjujemo efekat leka na bolest ($Lek \rightarrow Bolest$), ali nam je kontrolna grupa starija od ispitne, $Starost$ postaje konfaunder ($Lek \leftarrow Starost \rightarrow Bolest$) --- ispitivač je sam stvorio lažnu asocijaciju. Svaki uticaj $Leka$ sad će biti lažno izmenjen uticajem $Starosti$. Srećom, ako smo prikupili podatke o starosti pacijenata, lako možemo raspetljati neželjene efekte treće varijable od $Leka$.
+Konfaunder, od Latinskog *confundere*, što znači "umešano", je varijabla čiji efekat utiče na izloženost i ishod, stvarajući lažnu asocijaciju. Na primer, ako procenjujemo efekat leka na bolest ($Lek \rightarrow Bolest$), ali nam je kontrolna grupa starija od ispitne, $Starost$ postaje konfaunder ($Lek \leftarrow Starost \rightarrow Bolest$) --- ispitivač je sam stvorio lažnu asocijaciju. Svaki uticaj $Leka$ sad će biti lažno izmenjen uticajem $Starosti$. Srećom, ako smo prikupili podatke o starosti pacijenata, lako možemo raspetljati efekte treće varijable od $Leka$.
 
 ::: {.callout-note collapse="true"}
 ## Dodatak: matematičko objašnjenje kontrolisanja treće varijable
@@ -139,7 +139,7 @@ Kada znamo da je moguće kontrolisati za lažne asocijacije, da li treba da kont
 :::
 :::
 
-**Kauzalna salata** je procedura (ne samo regresija) kojom se uzima lista varijabli i na osnovu njih vrši nekakvo kauzalno zaključivanje. Nijedna veličina uzorka neće pretvoriti salatu u smisao. Ali postoji rešenje za biranje kontrolnih varijabli, **kauzalni dijagrami**.
+**Kauzalna salata** je procedura (ne samo regresija) kojom se uzima lista varijabli i na osnovu njih vrši nekakvo kauzalno zaključivanje [@mcelreath2021]. Nijedna veličina uzorka neće pretvoriti salatu u smisao. Ali postoji rešenje za biranje kontrolnih varijabli, **kauzalni dijagrami**.
 
 # Kauzalni dijagrami
 
@@ -283,7 +283,7 @@ flowchart LR
 
 Ono što možemo da procenimo je kauzalni efekat Leka na Krvni Pritisak ($Lek\,{\color{blue}\rightarrow}\,Krvni\,pritisak$). Za to nam ne treba nikakva kontrolna varijabla (@fig-frontdoor-1 pokazuje da nema strelice iz Infarkt Gena u Krvni Pritisak ($Infarkt\,Gen \nrightarrow Krvni\,pritisak$). Takođe, možemo da uočimo da je razlika između $P(\text{Krvni Pritisak}\,|\,\text{Lek})$ i $P(\text{Krvni Pritisak}\,|\,\text{Bez Leka})$, prosečan efekat Leka na Krvni Pritisak.
 
-@fig-frontdoor-1 pokazuje da možemo da procenimo kauzalni efekat Krvnog Pritiska na Infarkt ($Krvnog\,Pritiska \,{\color{red}\rightarrow}\,Infarkt$). Upotrebom *Backdoor kriterijuma* možemo da blokiramo efekat Leka na Krvni Pritisak.  Time smo saznali prosečan efekat prosečan efekat Krvnog Pritiska na Infarkt.
+@fig-frontdoor-1 pokazuje da možemo da procenimo kauzalni efekat Krvnog Pritiska na Infarkt ($Krvnog\,Pritiska \,{\color{red}\rightarrow}\,Infarkt$). Upotrebom *Backdoor kriterijuma* možemo da blokiramo efekat Leka na Krvni Pritisak. Time smo saznali prosečan efekat prosečan efekat Krvnog Pritiska na Infarkt.
 
 <!-- Tako ćemo dobiti $P(\text{Infarkt}\,|\,do\text{(Lek)})$ i $P(\text{Infarkt}\,|\,do\text{(Bez Leka)})$. -->
 
