--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Nikola N. Grubor, M.D."
-subtitle: "Ph.D. Student"
+subtitle: "Ph.D. Student, Biostatistics TA"
 about:
   template: solana
   image: avatar.jpg
@@ -23,7 +23,7 @@ about:
     #   href: uploads/resume.pdf
 ---
 
-I am a medical doctor and PhD student of Medical Statistics and Bioinformatics at the Belgrade Medical School Institute for Medical Statistics and Bioinformatics. I aim to make the science of medicine more approachable to the public and help researchers answer interesting questions. Bayesian scientific modeling offers a unique approach to quantifying uncertainty and incorporating prior knowledge via domain expertise elicitation, which can aid small and underfunded research teams in making a more significant impact. I have experience working in large research teams and managing communication with large groups of students. My involvement in patient care has led me to develop skills in making complex topics more approachable.
+I am a medical doctor, biostatistics teaching assistant, and PhD student of medical statistics and bioinformatics at the Belgrade Medical School Institute for Medical Statistics and Bioinformatics. I aim to make the science of medicine more approachable to the public and help researchers answer interesting questions. Bayesian scientific modeling offers a unique approach to quantifying uncertainty and incorporating prior knowledge via domain expertise elicitation, which can aid small and underfunded research teams in making a more significant impact. I have experience working in large research teams and managing communication with large groups of students. My involvement in patient care has led me to develop skills in making complex topics more approachable.
 
 ## Education
 
@@ -43,10 +43,16 @@ I am a medical doctor and PhD student of Medical Statistics and Bioinformatics a
 
 ## Experience
 
+-   **Teaching Assistant, Medical Statistics & Informatics**\
+    Department for Medical Statistics and Informatics, Belgrade University Medical School \| Apr 2024 --- Present
+
+```{=html}
+<!-- -->
+```
 -   **Research**\
     Department for Medical Statistics and Informatics, Belgrade University Medical School \| Sept 2022 --- Present
 
--   **Past Collaboration**\
+-   **Past Collaboration**
 
     1.  Clinic for Digestive Surgery (First Surgical Clinic), University Clinical Center of Serbia\
     2.  Institute for Biological Research "Siniša Stanković"
